math-core/src/snapshots/math_core__tests__text_with_escape_brace.snap
---
source: math-core/src/lib.rs
expression: "\\text{a\\}b}"
---
<math>
    <mtext>a}b</mtext>
</math>
