math-core/src/snapshots/math_core__tests__text_with_group.snap
---
source: math-core/src/lib.rs
expression: "\\text{x{y}z{}p{}}"
---
<math>
    <mtext>xyzp</mtext>
</math>
