math-core/src/snapshots/math_core__tests__text_with_math_command.snap
---
source: math-core/src/lib.rs
expression: "\\text{\\max}"
---
Position: 6
UnknownCommand(
    "max",
)
