math-core/src/snapshots/math_core__tests__text_with_special_symbols.snap
---
source: math-core/src/lib.rs
expression: "\\text{':,=-}"
---
<math>
    <mtext>’:,=-</mtext>
</math>
