math-core/src/snapshots/math_core__tests__text_with_unclosed_group.snap
---
source: math-core/src/lib.rs
expression: "\\text{x{}"
---
Position: 9
UnclosedGroup(
    GroupEnd,
)
