math-core/src/snapshots/math_core__tests__text_with_weird_o.snap
---
source: math-core/src/lib.rs
expression: "\\text{x\\o y}"
---
<math>
    <mtext>xøy</mtext>
</math>
