math-core/src/snapshots/math_core__tests__textbackslash.snap
---
source: math-core/src/lib.rs
expression: "\\text{\\textbackslash}"
---
<math>
    <mtext>\</mtext>
</math>
