math-core/src/snapshots/math_core__tests__textbf.snap
---
source: math-core/src/lib.rs
expression: "\\textbf{x}"
---
<math>
    <mtext>𝐱</mtext>
</math>
