math-core/src/snapshots/math_core__tests__textbf_with_digit.snap
---
source: math-core/src/lib.rs
expression: "\\textbf{1234}"
---
<math>
    <mtext>𝟏𝟐𝟑𝟒</mtext>
</math>
