math-core/src/snapshots/math_core__tests__textbf_with_digit_decimal.snap
---
source: math-core/src/lib.rs
expression: "\\textbf{1234.5}"
---
<math>
    <mtext>𝟏𝟐𝟑𝟒.𝟓</mtext>
</math>
