math-core/src/snapshots/math_core__tests__textit.snap
---
source: math-core/src/lib.rs
expression: "\\textit{x}"
---
<math>
    <mtext>𝑥</mtext>
</math>
